Out of Stocks Title Issue Style Issue - Overlap menu bar

--- a/Online book shop/Content/css/muses-main.less
+++ b/Online book shop/Content/css/muses-main.less
@@ -142,7 +142,7 @@ address {
   left: 0;
   width: 100%;
   z-index: 9;
-  max-height: 700px;
+  max-height: 1500px;
   background: #ffffff;
   display: none;
   ul {
